<resources>
    <string name="app_name">Attendance Manager</string>
    <string name="timetable_activity">Time Table</string>
    <string name="mark_attendance_activity">Mark Attendance</string>

    <string name="subject_name">Subject</string>
    <string name="class_attended">Attended</string>
    <string name="class_missed">Missed</string>
    <string name="class_cancelled">Cancelled</string>

    <string name="attendance_status">%d / %d</string>

    <string name="attendance_percentage">%.1f%%</string>
    <string name="timetable">Time-Table</string>
    <string name="select_subject">Select Subject</string>
    <string name="update_period">Update Period</string>
    <string name="add_subject">Add Subject</string>
    <string name="add_period">Add Period</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="subject_label">Subject Title</string>
    <string name="ask_for_attendance">Did you attended class today ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="edit_subject_title">Edit Title</string>
    <string name="edit_attendance">Edit Attendance</string>
    <string name="reset">Reset</string>
    <string name="remove">Remove</string>
    <string name="delete_subject">Delete Subject %s</string>
    <string name="warning_subject_delete">Are you sure you want to delete this subject ?</string>
    <string name="reset_attendance">Reset Attendance</string>
    <string name="warning_reset_attendance">
        It will reset all the attendance record for subject %s. Still want to reset ?</string>

</resources>
