<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="subject"
            type="android.hardik.attendancemanager.data.models.Subject" />

        <variable
            name="subjectsViewModel"
            type="android.hardik.attendancemanager.activities.main.viewmodels.SubjectsViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/subject_title_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@{subject.title}"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                tools:text="@string/subject_name"
                app:layout_constraintEnd_toStartOf="@+id/attendance_percentage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/attendance_percentage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:attendancePercentageFormatted="@{subject}"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:text="@string/attendance_percentage"
                app:layout_constraintBottom_toBottomOf="@+id/subject_title_textview"
                app:layout_constraintEnd_toStartOf="@+id/moreOptions"
                app:layout_constraintTop_toTopOf="@+id/subject_title_textview" />

            <Button
                android:id="@+id/onAttendedButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/border_attended_button"
                android:foreground="@drawable/ic_class_attended"
                android:onClick="@{() -> subjectsViewModel.onAttended(subject)}"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/onMissedButton"
                app:layout_constraintEnd_toStartOf="@+id/onMissedButton"
                app:layout_constraintTop_toTopOf="@+id/onMissedButton" />

            <Button
                android:id="@+id/onMissedButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/border_missed_button"
                android:foreground="@drawable/ic_class_missed"
                android:onClick="@{() -> subjectsViewModel.onMissed(subject)}"
                app:layout_constraintBottom_toBottomOf="@+id/attendance_stat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/attendance_stat" />

            <TextView
                android:id="@+id/attendance_stat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:attendanceStatFormatted="@{subject}"
                tools:text="@string/attendance_status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subject_title_textview" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:max="100"
                android:min="0"
                tools:progress="76"
                app:attendanceProgressFormatted="@{subject}"
                android:progressTint="#1E40FF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/onMissedButton" />

            <ImageButton
                android:id="@+id/moreOptions"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_more_options"
                android:onClick="@{() -> subjectsViewModel.onOptionSelected(subject)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>
